<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home_ip_Fragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:cardCornerRadius="12dp">
        <RelativeLayout
            android:id="@+id/layout_tiket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo_gumarang"/>
                <TextView
                    android:id="@+id/kota_asal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/kota_asal"/>
                <TextView
                    android:id="@+id/jamBerangkat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jam_berangkat"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/tgl_berangkat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tgl_berangkat"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/harga_tiket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/harga"
                    android:textSize="20dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/kota_tujuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/kota_tujuan"
                    />
                <TextView
                    android:id="@+id/jam_sampai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/jam_sampai"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/tgl_sampai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tgl_sampai"/>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>