<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="2dp"
    app:cardCornerRadius="12dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="440dp"
        android:layout_height="60dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:text="Tiket"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:padding="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="gotoDetailTiket"
        android:id="@+id/tiket"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="70dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/logo_gumarang"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/train"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"/>
        <TextView
            android:id="@+id/kode_tiket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kode tiket"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="35dp"/>

        <View
            android:layout_width="300dp"
            android:layout_height="0.8dp"
            android:visibility="visible"
            android:background="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="65dp"/>
        <TextView
            android:id="@+id/kota_asal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota_asal"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/jamBerangkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/jam_berangkat"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="95dp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/tgl_berangkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:text="@string/tgl_berangkat"
            android:layout_marginTop="130dp"/>
        <TextView
            android:id="@+id/kota_tujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/kota_tujuan"
            />
        <TextView
            android:id="@+id/jam_sampai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginRight="10dp"
            android:layout_marginTop="95dp"
            android:text="@string/jam_sampai"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tgl_sampai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/tgl_sampai"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>